syntax = "proto3";
option go_package = "github.com/alvidir/tp-auth/proto/user";

package user;
import public "login.proto";
import public "logout.proto";
import public "signup.proto";
import public "signin.proto";

enum Status {
    ALIVE = 0;
    DEAD = 1;
    NEW = 2;
}

message SessionResponse {
  string token = 1;    // Ephimeral token, if any
  string cookie = 2;   // Session cookie
  uint64 deadline = 3; // Cookie deadline
  Status status = 4;   // Session status for the given coockie
}

service Session {
  rpc Login(user.LoginRequest) returns (SessionResponse);
  rpc GoogleSignin(user.GoogleSigninRequest) returns (SessionResponse);
  rpc Logout(user.LogoutRequest) returns (SessionResponse);
  rpc Signup(user.SignupRequest) returns (SessionResponse);
}