syntax = "proto3";
option go_package = "github.com/alvidir/tp-auth/proto/user";

package user;

// GoogleSigninRequest description
message GoogleSigninRequest {
  string cookie = 1;
  string tokenID = 2;
}